@@ -1,6 +1,8 @@
 Endgame: Singularity Changelog
 
 v0.23 (release 2005.10.??):
+- Centralized some of the button code. (emh)
+- Fixed bug that allowed access to uncompleted bases. (emh, Borg[MDQ] for report)
 
 v0.22 (release 2005.10.05):
   [To read about the save file compatibility policy, please see README.txt.]
